// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  type="button"
>
  Default
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
<button
  className="ui button disabled"
  onClick={[Function]}
  type="button"
>
  Disabled
</button>
`;

exports[`Storyshots Button Google 1`] = `
<button
  className="ui button red"
  onClick={[Function]}
  type="button"
>
  <i
    className="google icon"
  />
  Google
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="ui button primary"
  onClick={[Function]}
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<button
  className="ui button primary disabled"
  onClick={[Function]}
  type="button"
>
  Primary Disabled
</button>
`;

exports[`Storyshots Button Submit 1`] = `
<button
  className="ui button"
  onClick={[Function]}
  type="submit"
>
  Submit
</button>
`;
